--- a/views/pets-show.pug
+++ b/views/pets-show.pug
@@ -11,6 +11,7 @@ block content
       h1=pet.name
       p=pet.species
       p Born on #{pet.birthday}
+      p Purchased At: #{pet.purchasedAt}
       p=pet.description
       .text-right
         a(href="/pets/" + pet.id + "/edit").btn-link Edit
